{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 27,
  "lineage": "2ed2935f-c5fe-8600-8646-3b68483c577f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:loadbalancer/app/Doan-alb/7f662e7ab3ed3730",
            "arn_suffix": "app/Doan-alb/7f662e7ab3ed3730",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Doan-alb-555155982.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:loadbalancer/app/Doan-alb/7f662e7ab3ed3730",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Doan-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05a31ab60b01e0a1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0472cf9c7d76a1899"
              },
              {
                "subnet_id": "subnet-0ce0e745097b03cea"
              }
            ],
            "subnets": [
              "subnet-0472cf9c7d76a1899",
              "subnet-0ce0e745097b03cea"
            ],
            "tags": {
              "Author": "DoAn",
              "Name": "application",
              "Type": "Application Load Balancer"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "application",
              "Type": "Application Load Balancer"
            },
            "vpc_id": "vpc-0995620c2f52a3664",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:listener/app/Doan-alb/7f662e7ab3ed3730/8e917941c7d464cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:targetgroup/my-tg/4c05164c74b45b19",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:listener/app/Doan-alb/7f662e7ab3ed3730/8e917941c7d464cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:loadbalancer/app/Doan-alb/7f662e7ab3ed3730",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.application_load_balancer",
            "module.alb.aws_lb_target_group.target_group",
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:targetgroup/my-tg/4c05164c74b45b19",
            "arn_suffix": "targetgroup/my-tg/4c05164c74b45b19",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:targetgroup/my-tg/4c05164c74b45b19",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Author": "DoAn",
              "Name": "Doan-target-group",
              "Type": "Target group for ALB"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "Doan-target-group",
              "Type": "Target group for ALB"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_ec2",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:targetgroup/my-tg/4c05164c74b45b19-20250403042059191200000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:637423316258:targetgroup/my-tg/4c05164c74b45b19",
            "target_id": "i-0554db886041b2c6d"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.target_group",
            "module.ec2.aws_instance.ec2_instances",
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-test",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1907b6d738188e5",
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:instance/i-0554db886041b2c6d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0554db886041b2c6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "doan-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d043294c6342a0b",
            "private_dns": "ip-10-0-17-187.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.17.187",
            "public_dns": "ec2-47-128-251-222.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.251.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:637423316258:key/80003710-6f6c-45ce-bbd6-008093e89524",
                "throughput": 125,
                "volume_id": "vol-03af5883edc8f1a71",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce0e745097b03cea",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-compute-ec2-test",
              "Type": "EC2"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-compute-ec2-test",
              "Type": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a31ab60b01e0a1c"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group/sg-05a31ab60b01e0a1c",
            "description": "Allow access to server",
            "egress": [],
            "id": "sg-05a31ab60b01e0a1c",
            "ingress": [],
            "name": "terraform-20250403042034042100000001",
            "name_prefix": "terraform-",
            "owner_id": "637423316258",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public",
              "Type": "Security-Group"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public",
              "Type": "Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public_sg_outbound",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-05e9ada6d52e694a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05e9ada6d52e694a2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-05e9ada6d52e694a2",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-outbound-rule1",
              "Type": "Security-Group-Outbound-Rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_1",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-0be72dc9337738cb8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0be72dc9337738cb8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-0be72dc9337738cb8",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule1",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule1",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_2",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-07e36ae8e65eea0ca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07e36ae8e65eea0ca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-07e36ae8e65eea0ca",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule2",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule2",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_3",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-03d14fca908f299e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-03d14fca908f299e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-03d14fca908f299e7",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule3",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule3",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_4",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-01d8cbc65d198a81c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-01d8cbc65d198a81c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-01d8cbc65d198a81c",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule4",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule4",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_5",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-0d19681518b459c30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0d19681518b459c30",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-0d19681518b459c30",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule5",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule5",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_6",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-0cda795dc606941a1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3001,
            "id": "sgr-0cda795dc606941a1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-0cda795dc606941a1",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule6",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule6",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 3001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_inbound_7",
      "provider": "module.sg.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:security-group-rule/sgr-011cd619192aafc02",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 27017,
            "id": "sgr-011cd619192aafc02",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a31ab60b01e0a1c",
            "security_group_rule_id": "sgr-011cd619192aafc02",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule7",
              "Type": "Security-Group-Inbound-Rule"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-sg-public-inbound-rule7",
              "Type": "Security-Group-Inbound-Rule"
            },
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.public_sg",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:internet-gateway/igw-048bff9ab902f4799",
            "id": "igw-048bff9ab902f4799",
            "owner_id": "637423316258",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-igw",
              "Type": "Internet-Gateway"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-igw",
              "Type": "Internet-Gateway"
            },
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:route-table/rtb-0fe56b91258e70fea",
            "id": "rtb-0fe56b91258e70fea",
            "owner_id": "637423316258",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-rtb-private",
              "Type": "Route-Table"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-rtb-private",
              "Type": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:route-table/rtb-06be0ccbfa4abd7c9",
            "id": "rtb-06be0ccbfa4abd7c9",
            "owner_id": "637423316258",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048bff9ab902f4799",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-rtb-public",
              "Type": "Route-Table"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-rtb-public",
              "Type": "Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07691ac32911e330c",
            "route_table_id": "rtb-0fe56b91258e70fea",
            "subnet_id": "subnet-0a88d853d87c5dcef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_1",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1456d56c26a33b",
            "route_table_id": "rtb-0fe56b91258e70fea",
            "subnet_id": "subnet-0cf95c024fe5bcd69"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table_1",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0561c790711fddba3",
            "route_table_id": "rtb-06be0ccbfa4abd7c9",
            "subnet_id": "subnet-0472cf9c7d76a1899"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00611f404ec1d337f",
            "route_table_id": "rtb-06be0ccbfa4abd7c9",
            "subnet_id": "subnet-0ce0e745097b03cea"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:subnet/subnet-0a88d853d87c5dcef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88d853d87c5dcef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423316258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-private1",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-private1",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:subnet/subnet-0cf95c024fe5bcd69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf95c024fe5bcd69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423316258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-private2",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-private2",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:subnet/subnet-0472cf9c7d76a1899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0472cf9c7d76a1899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423316258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-public1",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-public1",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:subnet/subnet-0ce0e745097b03cea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce0e745097b03cea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423316258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-public2",
              "Type": "Subnet"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-subnet-public2",
              "Type": "Subnet"
            },
            "vpc_id": "vpc-0995620c2f52a3664"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:637423316258:vpc/vpc-0995620c2f52a3664",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076f9da13dd14f3dc",
            "default_route_table_id": "rtb-07e2ed0e183b3ade8",
            "default_security_group_id": "sg-0ab87702f7beaa75b",
            "dhcp_options_id": "dopt-003e37576c7a2cd15",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0995620c2f52a3664",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e2ed0e183b3ade8",
            "owner_id": "637423316258",
            "tags": {
              "Author": "DoAn",
              "Name": "DoAn-network-vpc",
              "Type": "VPC"
            },
            "tags_all": {
              "Author": "DoAn",
              "Name": "DoAn-network-vpc",
              "Type": "VPC"
            }
          }
        }
      ]
    }
  ]
}